# Open-List-Proportional-Election

./: .gitignore  README.md  tmp2  tmp3
input/: input_example1_seatnum_2_group1_3_group2_2.txt  input_example2_seatnum_1_group1_10_group2_10.txt  input_example3_seatnum_2_group1_10_group2_10.txt  input_example4_seatnum_3_group1_10_group2_10.txt  input_example5_seatnum_10_group1_10_group2_10.txt5  input_square1.txt  input_square2.txt  input_square3.txt  input_square4.txt  input_square5.txt  input_square6.txt  input_square7.txt  input_square8.txt  input_square9.txt
release/: hklc  hklctest
shellscripts/: run_hklc_and_test.sh  run_hklc_only.sh  run_hklc_ssh.sh  test.sh
src/: CMakeLists.txt  Makefile  main.cpp  open_list_data.cpp  open_list_data.h  open_list_includes.h  open_list_input_output.cpp  open_list_input_output.h  open_list_party.cpp  open_list_party.h  open_list_party_basic_info.cpp  open_list_party_basic_info.h  open_list_solver.cpp  open_list_solver.h
src/test/: test_compute_payoff.cpp  test_init_alternatives.cpp  test_main.cpp  test_main2.cpp  test_unit.cpp  test_unit.h
src/test/deprecated/: test_compute_payoff.cpp  test_init_alternatives.cpp
